--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -320,6 +320,40 @@
                     {{/link-to}}
                 </nav>
             </div>
-        {{/if}}        
+        {{/if}}
+        {{#if userCan_ministry}}
+            <div class="nav-category">
+                <header class="category-header">
+                    <h2 class="primary-section">
+                        {{#link-to 'ministry.index' class="primary-section-link"}}
+                            <span class="mega-octicon octicon-heart"></span>
+                            Ministry
+                        {{/link-to}}
+                    </h2>
+                    <div class="panel-options">
+                        <a href="#" class="hidden-link-list-trigger">
+                            <span class="mega-octicon octicon-gear"></span>
+                        </a>
+                        <nav class="hidden-link-list">
+                            <h4>More options</h4>
+                            <a href="#" class="setting-link">Pin to Nav</a>
+                            <a href="#" class="setting-link">Set as default view</a>
+                        </nav>
+                    </div>
+                </header>
+                <nav class="category-links">
+<!--
+                    {{#link-to 'ministry.edit' 'new' class="sub-section-link"}}
+                        New Monthly Report
+                        <span class="octicon octicon-plus"></span>
+                    {{/link-to}}         
+-->                 
+                    {{#link-to 'ministry.index' class="sub-section-link"}}
+                        Reports Archive
+                        <span class="octicon octicon-chevron-right"></span>
+                    {{/link-to}}                                        
+                </nav>
+            </div>
+        {{/if}}  
     </div>
 </section>
