Commented out handlebars in an HTML comment
need to correctly break the handlebars formatting ({{}}) so that it
can’t be recognized by handlebars when commented out in HTML

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -343,10 +343,10 @@
                 </header>
                 <nav class="category-links">
 <!--
-                    {{#link-to 'ministry.edit' 'new' class="sub-section-link"}}
+                    {#link-to 'ministry.edit' 'new' class="sub-section-link"}}
                         New Monthly Report
                         <span class="octicon octicon-plus"></span>
-                    {{/link-to}}         
+                    {/link-to}]         
 -->                 
                     {{#link-to 'ministry.index' class="sub-section-link"}}
                         Reports Archive
