--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -341,17 +341,20 @@
                         </nav>
                     </div>
                 </header>
-                <nav class="category-links">
-<!--
-                    {#link-to 'ministry.edit' 'new' class="sub-section-link"}}
+                <nav class="category-links">               
+
+                    {{#link-to 'ministry.edit' 'new' class="sub-section-link"}}
                         New Monthly Report
                         <span class="octicon octicon-plus"></span>
-                    {/link-to}]         
--->                 
+                    {{/link-to}}        
+                    {{#link-to 'ministry.report' class="sub-section-link"}}
+                        In Progress Report
+                        <span class="octicon octicon-chevron-right"></span>
+                    {{/link-to}} 
                     {{#link-to 'ministry.index' class="sub-section-link"}}
                         Reports Archive
                         <span class="octicon octicon-chevron-right"></span>
-                    {{/link-to}}                                        
+                    {{/link-to}}                                  
                 </nav>
             </div>
         {{/if}}  
